--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ section {
 /* ================================================
                     Home
 =================================================== */
-
 #home {
     background: none;
     height: 100%;
@@ -1152,6 +1151,10 @@ footer p span {
 /* ================================================
                     Navigation
 =================================================== */
+#logo-img {
+    padding: 13px 15px;
+}
+
 .navbar {
     padding: 35px 0 20px 0;
     -webkit-transition: all 0.3s linear;
